src/objects/Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Requirement_Evaluation__c</fullName>
        <label>Requirement Evaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Meets requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat satisfies requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet requirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirement_Weight__c</fullName>
        <description>Importance of a particular requirement</description>
        <inlineHelpText>Importance of a particular requirement</inlineHelpText>
        <label>Requirement Weight</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requirement</label>
    <nameField>
        <label>Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>